# rust-web-api-try-out

./: Cargo.toml  README.md
assets/: 404.html  index.html
assets/js/: script.js
src/: main.rs
